// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSelectors should pass error state data through response: error state data 1`] = `
Object {
  "session": Object {
    "admin": false,
    "authorized": Object {},
    "entitled": false,
    "error": true,
    "errorCodes": Array [
      "loremIpsum",
    ],
    "errorMessage": "lorem ipsum",
    "permissions": Object {},
    "status": 403,
  },
}
`;

exports[`UserSelectors should pass existing state data through response: existing state data 1`] = `
Object {
  "session": Object {
    "admin": false,
    "authorized": Object {},
    "entitled": false,
    "error": false,
    "permissions": Object {},
  },
}
`;

exports[`UserSelectors should pass minimal data on missing a reducer response: missing reducer error 1`] = `
Object {
  "session": Object {
    "admin": false,
    "authorized": Object {},
    "entitled": false,
    "error": false,
    "permissions": Object {},
  },
}
`;

exports[`UserSelectors should pass transformed data on fulfill: fulfilled state data 1`] = `
Object {
  "session": Object {
    "admin": false,
    "authorized": Object {
      "subscriptions": true,
    },
    "entitled": true,
    "error": false,
    "permissions": Array [
      Object {
        "subscriptions": Object {
          "all": true,
          "resources": Object {
            "*": Object {
              "*": Array [],
              "loremCustom": Array [],
              "read": Array [],
            },
          },
        },
      },
    ],
  },
}
`;

exports[`UserSelectors should return specific selectors: selectors 1`] = `
Object {
  "makeUserSession": [Function],
  "userSession": [Function],
}
`;
